fix collapsing at 500px for overview section

--- a/css/style.css
+++ b/css/style.css
@@ -302,13 +302,15 @@ body {
         padding: 1.25rem 2rem; } }
     @media only screen and (max-width: 31.25em) {
       .overview__heading {
-        padding: 1.5rem 1rem; } }
+        padding: 1.5rem 1rem;
+        width: 50%; } }
   .overview__stars {
     margin-right: auto;
     display: flex; }
     @media only screen and (max-width: 31.25em) {
       .overview__stars {
-        margin-right: 0; } }
+        width: 50%;
+        justify-content: flex-end; } }
   .overview__icon-star, .overview__icon-location {
     width: 1.75rem;
     height: 1.75rem;
