--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -289,6 +289,7 @@
 
         @media only screen and (max-width: $bp-smallest){
             padding: 1.5rem 1rem;
+            width: 50%;
         }
         
     }
@@ -301,7 +302,8 @@
         display: flex;
 
         @media only screen and (max-width: $bp-smallest){
-            margin-right: 0;
+            width: 50%;
+            justify-content: flex-end;
         }
     }
 
